# IsekaiLink

./: LICENSE
backend/: .gitignore  Cargo.toml
backend/src/: db.rs  main.rs  server.rs
backend/src/handlers/: login.rs
backend/src/middlewares/: auth.rs
backend/src/sql/: create_tables.sql
backend/src/types/: api_response.rs  app_state.rs  mod.rs  session_store.rs
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.vue
frontend/src/components/: HelloWorld.vue  ModeToggleButton.vue
frontend/src/router/: index.ts
frontend/src/views/: JumpView.vue  LinksView.vue  LoginView.vue
