[package]
name = "backend"
version = "0.1.0"
edition = "2024"


[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
tokio = { version = "1.46.1", features = ["full"] }
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "tls-native-tls", "sqlite" ] }
serde = "1.0.219"
rand = "0.9.2"
log = "0.4.27"